test/fixtures/cli/objj.txt

test/fixtures/cli/objj.j:1:1: error: unexpected character '@'
@implementation Foo
^

1 error generated.
